--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,24 +1,19 @@
 version: 0.2
 
-phases: 
-    install:
-        runtime-versions:
-            nodejs: latest
-        commands:
-            - echo "installing something"
-    pre_build:
-        commands: 
-            - echo "we are in the pre build phase"
-    build:
-        commands:
-            - echo "we are in the build block"
-            - npm i --save
-            - echo "we will run some tests"
-            - grep -Fq "CloudMentorPro" index.html
-    post_build:
-        commands:
-            - echo "we are in the post build phase"
+phases:
+  install:
+    runtime-versions:
+      nodejs: 20
+    commands:
+      - node -v
+      - npm -v
+      - npm ci
+  build:
+    commands:
+      # Optional: quick sanity check that the app file exists
+      - test -f server.js || test -f app.js
 
 artifacts:
-    files:
-        - '**/*'
+  files:
+    - '**/*'
+  discard-paths: no
